--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400&display=swap");
 
 * {
@@ -23,6 +22,7 @@
 
 .nav-link {
   font-weight: 300 !important;
+  color: pink;
 }
 
 .active {
@@ -36,16 +36,21 @@
 }
 
 .search-form {
+  width: 400px;
   margin-right: 10px;
   margin-top: 4px;
+  border-radius: 20;
 }
+
 .search-form input {
   border: none;
   border-radius: 0;
+  border-radius: 20;
 }
+
 .search-form button {
   background-color: #000000;
-  border-radius: 0;
+  border-radius: 20;
   color: white;
 }
 
@@ -55,12 +60,12 @@
 .footer {
   color: white;
   padding: 25px;
-  background: #000000; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #434343,
-    #000000
-  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: #000000;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right,
+      #434343,
+      #000000);
+  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #434343, #000000);
 }
 
@@ -74,6 +79,7 @@
   color: #ffefba;
   border-bottom: 1px solid #ffefba;
 }
+
 /* =================================
 ======== page not found css ======= */
 .pnf {
@@ -100,10 +106,12 @@
   padding: 10px;
   margin-top: 10px;
 }
+
 .pnf-btn:hover {
   background-color: black;
   color: white;
 }
+
 /* ========================================= */
 /* =========contact us ========= */
 .contactus {
@@ -126,20 +134,23 @@
   font-size: 24px;
   text-transform: uppercase;
 }
+
 .cat-btn:hover {
   background-color: #434343;
   color: white;
 }
+
 /* ================
 ====dashboard
 =================== */
 
 .dashboard {
-  margin-top: 100px !important;
+  margin-top: 100px;
+
 }
 
 .dashboard-menu h4 {
-  background-color: #434343 !important;
-  color: white;
+  background-color: pink !important;
+  color: black;
   padding: 20px 0px;
 }
